--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ before_script:
 
 script:
     # we ignore E402 because of workarounds we use for modules loading, and F401 because some imports aren't directly used but needed for modules and travis doesn't like that
-    - docker exec testenv flake8 owm-weather.py --ignore E402,F401,W503,E722 --max-line-length 210
+    - docker exec testenv flake8 owm-weather.py --ignore E402,F401,W503,E722,E741 --max-line-length 210
